--- a/services/product/src/main/resources/application.yml
+++ b/services/product/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 spring:
-  application:
-    name: product
   config:
-    import: optional:/configserver:http://localhost:8888
+    import: optional:configserver:http://localhost:8888
+  application:
+    name: product-service
